--- a/Homework 01/starter_code/index.html
+++ b/Homework 01/starter_code/index.html
@@ -30,12 +30,14 @@
     <article>
         <h1>History of the Xia Dynasty</h1>
 
-        <p><img src="xia_dynasty.png" alt="Xia Dynasty Map">
+        <p>
+            <img src="xia_dynasty.png" alt="Xia Dynasty Map">
             The Xia dynasty (Chinese: 夏朝; pinyin: Xià Cháo; Wade–Giles:
             Hsia-Ch'ao; IPA: [ɕiâ
             tʂʰɑ̌ʊ̯]; c. 2070 – c. 1600 BC) is the first dynasty in traditional Chinese history. It is described in
             ancient historical chronicles such as the Bamboo Annals, the Classic of History and the Records of the Grand
-            Historian. According to tradition, the dynasty was established by the legendary Yu the Great^[1] after Shun,
+            Historian. According to tradition, the dynasty was established by the legendary Yu the Great^<a
+                href="#ref1">[1]</a>after Shun,
             the last of the Five Emperors, gave his throne to him. The Xia was later succeeded by the Shang dynasty
             (1600–1046 BC).
         </p>
@@ -53,11 +55,12 @@
             historiography and ideology. Although the Xia is an important element in early Chinese history, reliable
             information on the history of China before 13th century BC can only come from archaeological evidence since
             China's first established written system on a durable medium, the oracle bone script, did not exist until
-            then;^[2] however, no mention of the Xia, or the supposed conquest of the Xia by the Shang, is found in any
+            then;^<a href="#ref2">[2]</a> however, no mention of the Xia, or the supposed conquest of the Xia by the
+            Shang, is found in any
             oracle bones found to date. The first documentary reference to the Xia dates from more than a thousand years
             later. Thus, concrete existence for the Xia is yet to be proven, despite efforts by Chinese archaeologists
             to
-            link the Xia with Bronze Age Erlitou archaeological sites.^[3]
+            link the Xia with Bronze Age Erlitou archaeological sites.^<a href="#ref3">[3]</a>
         </p>
 
         <hr>
@@ -65,7 +68,7 @@
         <p>
             The Xia dynasty was described in classic texts such as the Classic of History (Shujing), the Bamboo Annals,
             and the Records of the Grand Historian (Shiji) by Sima Qian. According to tradition, the Huaxia were the
-            ancestral people of the Han Chinese.^[4]^[5]
+            ancestral people of the Han Chinese.^<a href="#ref4">[4]</a>^<a href="#ref5">[5]</a>
         </p>
 
         <h3>Origins and early development</h3>
@@ -148,7 +151,8 @@
             its early history. By critically examining the development of the narrative of early Chinese history
             throughout history, Gu concluded "the later the time, the longer the legendary period of earlier history...
             early Chinese history is a tale told and retold for generations, during which new elements were added to the
-            front end".^[6] Among other points, Gu and other historians note certain parallels between the traditional
+            front end".^<a href="#ref6">[6]</a> Among other points, Gu and other historians note certain parallels
+            between the traditional
             narrative of Xia history and Shang history that suggest Zhou-era fabrication or at least embellishment of
             Xia history. Yun Kuen Lee's criticism of nationalist sentiment in developing an explanation of Three
             Dynasties chronology focuses on the dichotomy of evidence provided by archaeological versus historical
@@ -177,17 +181,20 @@
             of the Xia dynasty at locations cited in ancient Chinese historical texts. There exists a debate as to
             whether or not the Erlitou culture was the site of the Xia dynasty. Radiocarbon dating places the site at c.
             2100 to 1800 BC, providing physical evidence of the existence of a state contemporaneous with and possibly
-            equivalent to the Xia dynasty as described in Chinese historical works.^[7] In 1959, a site located in the
+            equivalent to the Xia dynasty as described in Chinese historical works.^<a href="#ref7">[7]</a> In 1959, a
+            site located in the
             city of Yanshi was excavated containing large palaces that some archaeologists have attributed to capital of
             the Xia dynasty. Through the 1960s and 1970s, archaeologists have uncovered urban sites, bronze implements,
-            and tombs in the same locations cited in ancient Chinese historical texts regarding Xia;^[8] at a minimum,
+            and tombs in the same locations cited in ancient Chinese historical texts regarding Xia;^<a
+                href="#ref8">[8]</a> at a minimum,
             the Xia dynasty marked an evolutionary stage between the late neolithic cultures and the typical Chinese
-            urban civilization of the Shang dynasty.^[8]
+            urban civilization of the Shang dynasty.^<a href="#ref8">[8]</a>
         </p>
 
         <p>
             In 2011, Chinese archaeologists uncovered the remains of an imperial sized palace—dated to about 1700 BC—at
-            Erlitou in Henan, further fueling the discussions about the existence of the dynasty.^[9]
+            Erlitou in Henan, further fueling the discussions about the existence of the dynasty.^<a
+                href="#ref9">[9]</a>
         </p>
 
         <hr>
@@ -217,7 +224,81 @@
                 <td>Yǔ</td>
                 <td>Also Yu the Great</td>
             </tr>
+
+            <tr>
+                <td>02</td>
+                <td>10</td>
+                <td>啟</td>
+                <td>Qǐ</td>
+                <td>Son of Yu</td>
+            </tr>
+
+            <tr>
+                <td>03</td>
+                <td>29</td>
+                <td>太康</td>
+                <td>Tai Kang</td>
+                <td>&nbsp;</td>
+            </tr>
+
+            <tr>
+                <td>04</td>
+                <td>13</td>
+                <td>仲康</td>
+                <td>Zhòng Kāng</td>
+                <td></td>
+            </tr>
         </table>
+
+        <h2 id="references">References</h2>
+
+        <h3>Citations</h3>
+
+        <ol>
+            <li id="ref1">^ Mungello, David E. The Great Encounter of China and the West, 1500–1800 Rowman &
+                Littlefield; 3 ed (28 March 2009) ISBN 978-0-7425-5798-7 p. 97.</li>
+            <li id="ref2">^ Bagley, Robert. "Shang Archaeology." in The Cambridge History of Ancient China. Michael
+                Loewe and Edward Shaughnessy, ed. Cambridge: Cambridge University Press, 1999.</li>
+            <li id="ref3">^ Liu, L. & Xiu, H., "Rethinking Erlitou: legend, history and Chinese archaeology", Antiquity,
+                81:314 (2007) pp. 886–901.</li>
+            <li id="ref4">^ Cioffi-Revilla, Claudio; Lai, David (1995). "War and Politics in Ancient China, 2700 BC to
+                722 BC.". The Journal of Conflict Resolution 39 (3): 471–472. doi:10.1177/0022002795039003004.</li>
+            <li id="ref5">^ Lung, Rachel (2011), Interpreters in early imperial China, Amsterdam: John Benjamins
+                Publishing Company, p. 5, ISBN 978-90-272-2444-6</li>
+            <li id="ref6">^ ^a ^b Yun Kuen Lee, "Building the Chronology of Early Chinese History". Asian Perspectives:
+                the Journal of Archaeology for Asia and the Pacific, Vol. 41, 2002.</li>
+            <li id="ref7">^ Fairbank, John K. China: A New History. Cambridge: Harvard University Press, 1992, page 35.
+            </li>
+            <li id="ref8">^ ^a ^b "China – the ancient dynasties". Library of Congress Country Studies.</li>
+            <li id="ref9">^ "China finds 3,600-year-old palace". People's Daily Online. 13 December 2011.</li>
+            <li id="ref10">^ Mungello, David E. The Great Encounter of China and the West, 1500–1800 Rowman &
+                Littlefield; 3 edition (28 March 2009) ISBN 978-0-7425-5798-7 p.97.</li>
+            <li id="ref11">^ Wang Quangen 王泉根, (1993). Huaxia Quming Yishu 華夏取名藝術. (Taipei: Zhishu-fang Chuban Jituan
+                知書房出版集團), 42.</li>
+        </ol>
+
+        <h3>Bibliography</h3>
+
+        <ul>
+            <li>Deady, Kathleen W. and Dubois, Muriel L., Ancient China. Mankato, MN: Capstone Press, 2004.</li>
+            <li>Lee Yuan-Yuan and Shen, Sinyan. Chinese Musical Instruments (Chinese Music Monograph Series). 1999.
+                Chinese Music Society of North America Press. ISBN 1-880464-03-9</li>
+            <li>Allan, Sarah (1991), The Shape of the Turtle: Myth, Art, and Cosmos in Early China (S U N Y Series in
+                Chinese Philosophy and Culture). State University of New York Press. ISBN 978-0-7914-0459-1</li>
+            <li>Allan, Sarah, "Erlitou and the Formation of Chinese Civilization: Toward a New Paradigm", The Journal of
+                Asian Studies, 66:461–496 Cambridge University Press, 2007</li>
+            <li>Mair, Victor H. (2013), with contributions by E. Bruce Brooks, "Was There a Xià Dynasty?", Sino-Platonic
+                Papers 238</li>
+        </ul>
+
+        <h4>Further Reading</h4>
+
+        <ul>
+            <li>Allen, Herbert J. (translator) (1895). "Ssŭma Ch'ien's Historical Records, Chapter II – The Hsia
+                Dynasty". Journal of the Royal Asiatic Society 27 (1): 93–110. doi:10.1017/S0035869X00022784.</li>
+            <li>Legge, James (translator) (1865). "The Annals of the Bamboo Books: The Dynasty of Hea". The Chinese
+                Classics, volume 3, part 1. pp. 117–127.</li>
+        </ul>
 
     </article>
 
