--- a/Homework 01/starter_code/Homework-1-18-23.html
+++ b/Homework 01/starter_code/Homework-1-18-23.html
@@ -8,7 +8,7 @@
 
     <title>Xia Dynasty</title>
 
-   <link rel="stylesheet" href="Homework-1-18-23.css">
+    <link rel="stylesheet" href="Homework-1-18-23.css">
 
 </head>
 
@@ -22,9 +22,10 @@
                 <li><a href="#skepticism">Mondern Skepticism</a></li>
                 <li><a href="#discoveries">Archeological Discoveries</a></li>
                 <li><a href="#sovereigns">Sovereigns of the Xia Dynasty</a></li>
-                <li><a href="references">References</a></li>
+                <li><a href="#references">References</a></li>
             </ol>
         </nav>
+    
     </header>
 
     <article>
@@ -32,6 +33,7 @@
 
         <p>
             <img src="xia_dynasty.png" alt="Xia Dynasty Map">
+
             The Xia dynasty (Chinese: 夏朝; pinyin: Xià Cháo; Wade–Giles:
             Hsia-Ch'ao; IPA: [ɕiâ
             tʂʰɑ̌ʊ̯]; c. 2070 – c. 1600 BC) is the first dynasty in traditional Chinese history. It is described in
