--- a/Lesson 04/E1_enrichment_relaxr_header/startup.html
+++ b/Lesson 04/E1_enrichment_relaxr_header/startup.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Starup Matchmaker</title>
 
-    <link href="stylesheet" rel="matchmaker.css"
+    <link rel="stylesheet" href="matchmaker.css" 
+
 </head>
 
 
-<header class="exerciseHeader">
-    <div class="exerciseHeaderLogo visibleBox">Startup Matchmaker</div>
-    <nav class="exerciseHeaderNav">
-        <ul>
-            <li class="visibleBox">B1</li>
-            <li class="visibleBox">B2</li>
-            <li class="visibleBox">B3</li>
-            <li class="visibleBox">B4</li>
-            <li class="visibleBox">B45</li>
-        </ul>
-    </nav>
-</header>
+    <header class="exerciseHeader">
+        <div class="exerciseHeaderLogo visibleBox">Startup Matchmaker</div>
+        <nav class="exerciseHeaderNav">
+            <ul>
+                <li class="visibleBox">Developers</li>
+                <li class="visibleBox">Designers</li>
+                <li class="visibleBox">How it Works</li>
+                <li class="visibleBox">Our Team</li>
+                <li class="visibleBox">Blog</li>
+            </ul>
+        </nav>
+    </header>
+
 <body>
-    <p>In CSS apply your knowledge of flexbox to recreate implementation above. </p>
+
 </body>
+
 </html>
