--- a/Homework 02/starter_code/index.html
+++ b/Homework 02/starter_code/index.html
@@ -23,8 +23,8 @@
 
         <nav class="main-nav">
             <ul>
-                <li class="main-nav-item main-nav-item-featured"><a href="">Find a Developer</a></li>
-                <li class="main-nav-item main-nav-item-featured"><a href="">Find Designers</a></li>
+                <li class="main-nav-item-featured"><a href="">Find a Developer</a></li>
+                <li class="main-nav-item-featured"><a href="">Find Designers</a></li>
                 <li class="main-nav-item"><a href="">How it Works</a></li>
                 <li class="main-nav-item"><a href="">Our Team</a></li>
                 <li class="main-nav-item"><a href="">Blog</a></li>
@@ -32,34 +32,48 @@
         </nav>
     </header>
 
-    <p>Because two brains <s>taste</s> <u>are</u> better than one.</p>
+    <section class="brain">
+        <p>Because two brains <span class="strike">taste</span> <span class="underline">are</span> better than one.</p>
+    </section>
 
-    <div>
-        <h2> Meet your Match!</h2>
+    <section class="matchBox">
 
-        <p> Have a great idea for a product, but need help making it a reality? We're here to help. Startup Matchmaker
-            is
-            the
-            best place for designers and developers to find each other.</p>
-    </div>
+        <div class="matchInsert">
+            <h2> Meet your Match!</h2>
 
-    <section>
+            <p> Have a great idea for a product, but need help making it a reality? We're here to help. Startup
+                Matchmaker
+                is
+                the
+                best place for designers and developers to find each other.</p>
+            <a href="" class="bMatch createB">Create a Profile</a>
+        </div>
+    </section>
 
-        <h1>Create a Profile</h1>
-        <p>Are you a Designer? Developer? Put yourself out there so that others can find you!</p>
-        Sign up now
 
-        <h1>Find a Developer</h1>
-        <p>Looking for a fantastic developer to work with on the next big thing? Look no further.</p>
-        Start Your Search
+    <section class="matchThree">
 
-        <h1>Find a Designer</h1>
-        <p>Need someone who can make a product intuitive and appealing? Get ready.</p>
+        <article class="containerMatch">
+            <h1>Create a Profile</h1>
+            <p>Are you a Designer? Developer? Put yourself out there so that others can find you!</p>
+            <a href="" class="bMatch" >Sign up now</a>
+        </article>
 
-        Start Your Search
+        <article class="containerMatch">
+            <h1>Find a Developer</h1>
+            <p>Looking for a fantastic developer to work with on the next big thing? Look no further.</p>
+            <a href="" class="bMatch" >Start Your Search</a>
+        </article>
+
+        <article class="containerMatch">
+            <h1>Find a Designer</h1>
+            <p>Need someone who can make a product intuitive and appealing? Get ready.</p>
+            <a href="" class="bMatch" >Start Your Search</a>
+        </article>
 
     </section>
-    <footer>
+
+    <footer class="footer">
         2019 Startup Matchmaker. Made in NY.
     </footer>
 
