--- a/Homework 02/starter_code/index.html
+++ b/Homework 02/starter_code/index.html
@@ -16,18 +16,18 @@
 <body>
     <!-- Put your glorious code here -->
 
-    <header class="header">
+    <header class="Matchheader">
         <div class="logo">
             <h1><a href="">Startup Matchmaker</a></h1>
         </div>
 
-        <nav class="main-nav">
+        <nav class="matchNav">
             <ul>
-                <li class="main-nav-item-featured"><a href="">Find a Developer</a></li>
-                <li class="main-nav-item-featured"><a href="">Find Designers</a></li>
-                <li class="main-nav-item"><a href="">How it Works</a></li>
-                <li class="main-nav-item"><a href="">Our Team</a></li>
-                <li class="main-nav-item"><a href="">Blog</a></li>
+                <li class="matchNavFind"><a href="">Find a Developer</a></li>
+                <li class="matchNavFind"><a href="">Find Designers</a></li>
+                <li class="matchNav"><a href="">How it Works</a></li>
+                <li class="matchNav"><a href="">Our Team</a></li>
+                <li class="matchNav"><a href="">Blog</a></li>
             </ul>
         </nav>
     </header>
@@ -56,25 +56,25 @@
         <article class="containerMatch">
             <h1>Create a Profile</h1>
             <p>Are you a Designer? Developer? Put yourself out there so that others can find you!</p>
-            <a href="" class="bMatch" >Sign up now</a>
+            <a href="" class="bMatch">Sign up now</a>
         </article>
 
         <article class="containerMatch">
             <h1>Find a Developer</h1>
             <p>Looking for a fantastic developer to work with on the next big thing? Look no further.</p>
-            <a href="" class="bMatch" >Start Your Search</a>
+            <a href="" class="bMatch">Start Your Search</a>
         </article>
 
         <article class="containerMatch">
             <h1>Find a Designer</h1>
             <p>Need someone who can make a product intuitive and appealing? Get ready.</p>
-            <a href="" class="bMatch" >Start Your Search</a>
+            <a href="" class="bMatch">Start Your Search</a>
         </article>
 
     </section>
 
     <footer class="footer">
-        2019 Startup Matchmaker. Made in NY.
+        &copy; 2019 Startup Matchmaker. Made in NY.
     </footer>
 
 </body>
