--- a/Lesson 05/05_layout_challenge_cssgrid/starter_code/layouts_page_1.html
+++ b/Lesson 05/05_layout_challenge_cssgrid/starter_code/layouts_page_1.html
@@ -9,9 +9,10 @@
 </head>
 <body>
 
-<header class="exerciseHeader visibleBox">B</header>
+<header class="exerciseHeader visibleBox">A</header>
 
 <main class="exerciseMain">
+
     <section class="exerciseMainContent visibleBox">B</section>
     <aside class="exerciseMainAside visibleBox">C</aside>
 </main>
