--- a/Lesson 05/05_layout_challenge_cssgrid/starter_code/layouts_page_4.html
+++ b/Lesson 05/05_layout_challenge_cssgrid/starter_code/layouts_page_4.html
@@ -12,7 +12,8 @@
 
 
 
-<header class="exerciseHeader">
+<header class="exerciseHeader"> 
+<!-- this changes the nav as well because it's in the sec -->
     <div class="exerciseHeaderLogo visibleBox">A</div>
     <nav class="exerciseHeaderNav">
         <ul>
@@ -29,10 +30,13 @@
     <section class="exerciseMainContent visibleBox">
             C
     </section>
+
     <section class="exerciseAdditionalFeatures">
+
         <div class="exerciseMarketingFeature visibleBox">D</div>
         <div class="exerciseMarketingFeature visibleBox">D</div>
         <div class="exerciseMarketingFeature visibleBox">D</div>
+
     </section>
 </main>
 
