--- a/Lesson 05/05_layout_challenge_cssgrid/starter_code/layouts_page_5.html
+++ b/Lesson 05/05_layout_challenge_cssgrid/starter_code/layouts_page_5.html
@@ -24,9 +24,11 @@
 </header>
 
 <main class="exerciseMain" >
+   
     <aside class="exerciseMainLeftNav visibleBox">
         C
     </aside>
+
     <section class="exerciseMainContent">
         <div class="exerciseMainContentBanner visibleBox">D</div>
         <div class="exerciseMainContentSubBanner visibleBox">E</div>
@@ -34,7 +36,10 @@
         <div class="exerciseMainContentBlock visibleBox">G1</div>
         <div class="exerciseMainContentBlock visibleBox">G2</div>
         <div class="exerciseMainContentBlock visibleBox">G3</div>
+        <div class="exerciseMainContentBlock visibleBox">G4</div>
+    
     </section>
+
 
 </main>
 
