--- a/Lesson 06/airbnb-css-lab-starter-code/index.html
+++ b/Lesson 06/airbnb-css-lab-starter-code/index.html
@@ -1,20 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Airbnb | Melbourne</title>
-    <link rel="stylesheet" href="normalize.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Nunito:400,700,900" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    
-    <!-- Logo: ./logo.png -->
-    <!-- Heart icon: ./heart.png -->
-    <!-- Chat icon: ./chat.png -->
-    
-    <p>Make it look like this:</p>
-    <img src="./Airbnb _ Melbourne.png" alt="solution" style="width:1200px;" />
+
+<head>
+  <meta charset="UTF-8">
+  <title>Airbnb | Melbourne</title>
+  <link rel="stylesheet" href="normalize.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Nunito:400,700,900" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+  <!-- Logo: ./logo.png -->
+  <!-- Heart icon: ./heart.png -->
+  <!-- Chat icon: ./chat.png -->
+
+
+  <header class="ab-header">
+    <div class="ab-topnav">
+      <a href="/" class="ab-topnav-logo"></a> <img src="logo.png" alt="">
+    </div>
+  </header>
+
+  <nav class="ab-top-nav">
+    <ul class="ab-topnav-nav ul">
+      <li><a href="#">Sign Up</a></li>
+      <li><a href="#">Login</a></li>
+    </ul>
+  </nav>
+
+  <section class="ab-hero">
+
+    <div clas="ab-hero-inner">
+
+      <h1> Melbourne</h1>
+
+      <p>From footy to fashion, the cultural capital of Australia dares to stay on the cutting edge.</p>
+
+      <a href="#" class="ab-btn">Find a neighborhood</a>
+
+    </div>
+
+  </section>
+
+
+  <section class="ab-commentary">
+
+    <div class="ab-commentary-col">
+      <article class="ab-locals">
+        <header>
+          <h1>Locals Love</h1>
+        </header>
+        <div>
+          <img src="heart.png" alt="Heart">
+          <p>Tourists mispronouncing Melbourne (it's mel-bin), crowded trains & trams, ticket inspectors, unpredictable
+            weather, the price of real estate, Sydney</p>
+        </div>
+      </article>
+
+      <div class="ab-commentary-col"></div>
+      <article class="ab-locals">
+        <header>
+          <h1>Locals Complain About</h1>
+        </header>
+
+        <div>
+          <img src="chat.png" alt="Chat Bubble">
+          <p>Coffee, talking about coffee, brunch, footy in winter, cricket in summer, laneways & hidden bars, street
+            art & buskers, debating which side of the river is better</p>
+        </div>
+
+      </article>
+    </div>
+
+  </section>
+  </div>
+  </section>
+
   
-  </body>
+  <section class="ab_featured_trio">
+
+    <header class="ab_featured_trio_header">
+      <h1>Featured Neighborhoods</h1>
+      <p>Explore 19 Melbourne neighborhoods. Which are right for you?</p>
+    </header>
+
+    <div class="ab_featured_trio_triple_column">
+        <div>
+          <article class="ab_neighborhood" id="neigh_fitzrow">
+            <header>
+              <h1>Fitzroy</h1>
+              <h2>Baristas, Beards, Bikes.</h2>
+            </header>
+            <div>
+              <p>Hip Terrace Houses Anything Goes Vintage Clothing</p>
+            </div>
+          </article>
+        </div>
+        <div>
+          <article class="ab_neighborhood" id="neigh_stkilda">
+            <header>
+              <h1>St Kilda</h1>
+              <h2>Backpackers and packed sand.</h2>
+            </header>
+            <div>
+              <p>Cake Shops Backpackers Hippies Beach Culture</p>
+            </div>
+          </article>
+        </div>
+        <div>
+          <article class="ab_neighborhood" id="neigh_central">
+            <header>
+              <h1>Central Business District</h1>
+              <h2>Big business. Little laneways.</h2>
+            </header>
+            <div>
+              <p>Coffee Culture Working Nine To Five Federation Square Flinders Street Station</p>
+            </div>
+          </article>
+        </div>
+    </div>
+
+    <footer class="ab_featured_trio_header">
+      <a href="#" class="ab-btn">Find a neighborhood</a>
+    </footer>
+
+  </section>
+
+
+
+
+
+
+
+
+  <!-- <p>Make it look like this:</p>
+    <img src="./Airbnb _ Melbourne.png" alt="solution" style="width:1200px;" /> -->
+
+</body>
+
 </html>
