--- a/Lesson 06/airbnb-css-lab-starter-code/index.html
+++ b/Lesson 06/airbnb-css-lab-starter-code/index.html
@@ -16,28 +16,40 @@
   <!-- Chat icon: ./chat.png -->
 
 
-  <header class="ab-header">
-    <div class="ab-topnav">
-      <a href="/" class="ab-topnav-logo"></a> <img src="logo.png" alt="">
+  <!--  
+    <div class="ab-topnav-logo">
+      <a href="/" class="ab-topnav-logo"> <img src="logo.png" alt=""></a> 
     </div>
-  </header>
+ 
 
   <nav class="ab-top-nav">
     <ul class="ab-topnav-nav ul">
       <li><a href="#">Sign Up</a></li>
       <li><a href="#">Login</a></li>
     </ul>
+  </nav> -->
+
+  <!-- Nav section -->
+
+  <nav class="ab-topnav">
+    <a href="/" class="ab-topnav-logo"><img src="logo.png" alt="air bnb logo"></a>
+
+    <ul class="ab-topnav-nav">
+      <li><a href="#"></a>Sign Up</li>
+      <li><a href="#"></a>Login</li>
+    </ul>
+
+
   </nav>
+
 
   <section class="ab-hero">
 
-    <div clas="ab-hero-inner">
+    <div class="ab-hero-inner">
 
       <h1> Melbourne</h1>
-
       <p>From footy to fashion, the cultural capital of Australia dares to stay on the cutting edge.</p>
-
-      <a href="#" class="ab-btn">Find a neighborhood</a>
+      <a href="#" class="ab-btn">Find a Neighborhood</a>
 
     </div>
 
@@ -77,7 +89,7 @@
   </div>
   </section>
 
-  
+
   <section class="ab_featured_trio">
 
     <header class="ab_featured_trio_header">
@@ -86,39 +98,39 @@
     </header>
 
     <div class="ab_featured_trio_triple_column">
-        <div>
-          <article class="ab_neighborhood" id="neigh_fitzrow">
-            <header>
-              <h1>Fitzroy</h1>
-              <h2>Baristas, Beards, Bikes.</h2>
-            </header>
-            <div>
-              <p>Hip Terrace Houses Anything Goes Vintage Clothing</p>
-            </div>
-          </article>
-        </div>
-        <div>
-          <article class="ab_neighborhood" id="neigh_stkilda">
-            <header>
-              <h1>St Kilda</h1>
-              <h2>Backpackers and packed sand.</h2>
-            </header>
-            <div>
-              <p>Cake Shops Backpackers Hippies Beach Culture</p>
-            </div>
-          </article>
-        </div>
-        <div>
-          <article class="ab_neighborhood" id="neigh_central">
-            <header>
-              <h1>Central Business District</h1>
-              <h2>Big business. Little laneways.</h2>
-            </header>
-            <div>
-              <p>Coffee Culture Working Nine To Five Federation Square Flinders Street Station</p>
-            </div>
-          </article>
-        </div>
+      <div>
+        <article class="ab_neighborhood" id="neigh_fitzrow">
+          <header>
+            <h1>Fitzroy</h1>
+            <h2>Baristas, Beards, Bikes.</h2>
+          </header>
+          <div>
+            <p>Hip Terrace Houses Anything Goes Vintage Clothing</p>
+          </div>
+        </article>
+      </div>
+      <div>
+        <article class="ab_neighborhood" id="neigh_stkilda">
+          <header>
+            <h1>St Kilda</h1>
+            <h2>Backpackers and packed sand.</h2>
+          </header>
+          <div>
+            <p>Cake Shops Backpackers Hippies Beach Culture</p>
+          </div>
+        </article>
+      </div>
+      <div>
+        <article class="ab_neighborhood" id="neigh_central">
+          <header>
+            <h1>Central Business District</h1>
+            <h2>Big business. Little laneways.</h2>
+          </header>
+          <div>
+            <p>Coffee Culture Working Nine To Five Federation Square Flinders Street Station</p>
+          </div>
+        </article>
+      </div>
     </div>
 
     <footer class="ab_featured_trio_header">
