--- a/Homework 03/starter_code/index.html
+++ b/Homework 03/starter_code/index.html
@@ -145,17 +145,25 @@ HTML Skeleton to get you going:
  <main class="trulia-grid">
 
     <!-- Example grid-item -->
+
+
     <article class="trulia-grid-item">
+
       <div class="trulia-house-image trulia-house-image-12">
         <div class="new-box"></div>
+
       </div>
       <ul class="trulia-house-facts">
-          <li class="trulia-house-price"><h1></h1></li>
+          <li class="trulia-house-price">
+            <h1></h1>
+        </li>
           <li class="trulia-house-stats">
-              <ul>
-                  <li class="trulia-house-beds"><img src="" class="trulia-article-icon">  </li>
+              
+            
+            <ul>
+                  <li class="trulia-house-beds"><img src="" class="trulia-article-icon"></li>
 
-                  <li class="trulia-house-baths"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/2522641/bath-icon.png" class="trulia-article-icon">   </li>
+                  <li class="trulia-house-baths"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/2522641/bath-icon.png" class="trulia-article-icon"></li>
 
                   <li class="trulia-house-sqft"></li>
               </ul>
@@ -164,6 +172,7 @@ HTML Skeleton to get you going:
               <address class="trulia-house-address"><br/></address>
           </li>
       </ul>
+
   </article>
   
   </main>
