--- a/Homework 03/starter_code/hw3.html
+++ b/Homework 03/starter_code/hw3.html
@@ -544,9 +544,46 @@
         </section>
     </nav>
 
+    <article class="t-insights">
+        <h2>20010 Real Estate Insights</h2>
+        <p>ZIP code 20010 is located in Washington, District of Columbia.</p>
+        <p>The plethora of grocery stores in ZIP code 20010 makes it easy to stock up on specialty foods, like organic
+            and gluten-free options, without having to leave the area. There is <a
+                href="[https://www.trulia.com/real_estate/20010-Washington/]">easy access to public transportation</a>,
+            which is the preferred way to travel here due to its ease of use and abundant travel options. Bicycles are
+            big sellers in ZIP code 20010; everyone seems to be riding these days, whether it's for the daily commute or
+            a fun afternoon with the family.</p>
 
-    
+        <p>Many houses in ZIP code 20010 are historic with one-of-a-kind architecture, and it's clear to see why it's so
+            important to maintain them and keep history living on. This year, the average listing price grew to $658,471
+            in this locale, a noticeable appreciation of 12.5 percent from $585,528 the year prior. During the same
+            period, inventory is noticeably increasing in this locale year-over-year, with a 20 percent increase in
+            for-sale listings last year alone. Enjoy a cozy night by the fire, as many residences here come equipped
+            with authentic fireplaces. ZIP code 20010 has some great historic estates so if you move to one of these
+            homes, you'll be inheriting a piece of history. If you enjoy a view and the ability to see far and wide <a
+                href="[https://www.trulia.com/for_sale/20010_zip/penthouse_keyword/]">consider a penthouse in this
+                place</a> for an unparalleled experience</p>
 
+    </article>
+
+
+    <footer class="t-footer">
+        <ul class="t-footer-links">
+            <li><a href="/">About Trulia</a></li>
+            <li><a href="/">About Zillow Group</a></li>
+            <li><a href="/">Careers</a></li>
+            <li><a href="/">Investor Relations</a></li>
+            <li><a href="/">Advertising Terms</a></li>
+            <li><a href="/">Privacy Terms of Use</a></li>
+            <li><a href="/">Listings Quality Policy</a></li>
+            <li><a href="/">Subscription Terms</a></li>
+            <li><a href="/">Ad Choices</a></li>
+            <li><a href="/">Help</a></li>
+
+        </ul>
+        <p class="t-legal">Copyright © 2018 Trulia, LLC. All rights reserved. Equal Housing Opportunity.
+        <p>
+    </footer>
 
 </body>
 
