final-changes-hw32-6-23

--- a/Homework 03/starter_code/hw3.html
+++ b/Homework 03/starter_code/hw3.html
@@ -43,8 +43,6 @@
         <div class="t-for-sale-text">
             <h1>Homes For Sale & Real Estate in 20010</h1>
             <p>79 homes available on Trulia</p>
-
-
         </div>
 
     </section>
@@ -79,7 +77,7 @@
                     </ul>
                 <li>
                     <address class="t-house-address">
-                        3205 Georgia Ave NW #403
+                        3205 Georgia Ave NW #403 <br>
                         Pleasant Plains, Washington, DC</address>
                 </li>
             </ul>
@@ -119,7 +117,7 @@
                     </ul>
                 <li>
                     <address class="t-house-address">
-                        3615 10th St NW #B
+                        3615 10th St NW #B<br>
                         Columbia Heights, Washington, DC</address>
                 </li>
             </ul>
@@ -159,7 +157,7 @@
                     </ul>
                 <li>
                     <address class="t-house-address">
-                        3120 Park Pl NW
+                        3120 Park Pl NW<br>
                         Pleasant Plains, Washington, DC</address>
                 </li>
             </ul>
@@ -199,7 +197,7 @@
                     </ul>
                 <li>
                     <address class="t-house-address">
-                        3221 Warder St NW #1
+                        3221 Warder St NW #1<br>
                         Pleasant Plains, Washington, DC </address>
                 </li>
             </ul>
@@ -239,7 +237,7 @@
                     </ul>
                 <li>
                     <address class="t-house-address">
-                        705 Kenyon St NW
+                        705 Kenyon St NW<br>
                         Pleasant Plains, Washington, DC </address>
                 </li>
             </ul>
@@ -280,7 +278,7 @@
                     </ul>
                 <li>
                     <address class="t-house-address">
-                        1363 Oak St NW
+                        1363 Oak St NW<br>
                         Columbia Heights, Washington, DC </address>
                 </li>
             </ul>
@@ -317,7 +315,7 @@
                     </ul>
                 <li>
                     <address class="t-house-address">
-                        1307 Irving St NW #1
+                        1307 Irving St NW #1<br>
                         Columbia Heights, Washington, DC </address>
                 </li>
             </ul>
@@ -355,7 +353,7 @@
                     </ul>
                 <li>
                     <address class="t-house-address">
-                        752 Park Rd NW
+                        752 Park Rd NW<br>
                         Columbia Heights, Washington, DC </address>
                 </li>
             </ul>
@@ -395,7 +393,7 @@
                     </ul>
                 <li>
                     <address class="t-house-address">
-                        752 Park Rd NW
+                        752 Park Rd NW<br>
                         Columbia Heights, Washington, DC </address>
                 </li>
             </ul>
@@ -433,7 +431,7 @@
                     </ul>
                 <li>
                     <address class="t-house-address">
-                        3205 Georgia Ave NW #403
+                        3205 Georgia Ave NW #403<br>
                         Pleasant Plains, Washington, DC </address>
                 </li>
             </ul>
@@ -470,7 +468,7 @@
                     </ul>
                 <li>
                     <address class="t-house-address">
-                        1356 Kenyon St NW #8
+                        1356 Kenyon St NW #8<br>
                         Columbia Heights, Washington, DC </address>
                 </li>
             </ul>
@@ -507,7 +505,7 @@
                     </ul>
                 <li>
                     <address class="t-house-address">
-                        3205 Georgia Ave NW, #505
+                        3205 Georgia Ave NW, #505<br>
                         Pleasant Plains, Washington, DC </address>
                 </li>
             </ul>
