--- a/Lesson 11/02_PrintCssLab/starter_code/index.html
+++ b/Lesson 11/02_PrintCssLab/starter_code/index.html
@@ -9,6 +9,7 @@
 <body>
 
 <header class="pcl_siteHeader">
+    
     <div class="pcl_contentOuter">
         <div class="pcl_logoRow">
             <div class="pcl_logoHaus"><img src="images/tractor_logo.png" alt=""></div>
@@ -57,7 +58,7 @@
                     </tr>
                     <tr>
                         <td>6</td>
-                        <td>Size 4 Tires/td>
+                        <td>Size 4 Tires</td>
                         <td>$320</td>
                         <td>$1920</td>
                     </tr>
