--- a/Lesson 13/05_CitiPix/starter_code/index.html
+++ b/Lesson 13/05_CitiPix/starter_code/index.html
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/style.css">
 
-	</head>
+	</head> 
 	<body>
 		<header>
 			<div class="title">
@@ -26,5 +26,7 @@
 					</select>
 				</form>
 			</div>
+
+			<script src="script.js"></script
 	</body>
 </html>
