--- a/Lesson 14/01_Bootstrap_Responsive_Lab/starter_code/index.html
+++ b/Lesson 14/01_Bootstrap_Responsive_Lab/starter_code/index.html
@@ -1,23 +1,31 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Startup Matchmaker</title>
-        <meta name="description" content="Having a great idea for a product, but need help making it a reality? We're here to help. Startup Matchmaker is the place for designers and developers to find each other.">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href='http://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Merriweather:400,700,700italic,400italic' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="css/normalize.css">
 
-        <link rel="stylesheet" href="css/main.css">
-    </head>
-    <body>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Startup Matchmaker</title>
+    <meta name="description"
+        content="Having a great idea for a product, but need help making it a reality? We're here to help. Startup Matchmaker is the place for designers and developers to find each other.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href='http://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Merriweather:400,700,700italic,400italic' rel='stylesheet'
+        type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic,700italic' rel='stylesheet'
+        type='text/css'>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/main.css">
+</head>
 
+<body>
 
-            <!-- Site Header -->
-            <header class="site-header clearfix">
+    <div class="container">
+        <!-- Site Header -->
+        <header class="site-header clearfix row">
+
+            <div class="col">
                 <a href="#" class="hamburger"><img src="images/Hamburger_icon.png" alt="Show Menu" /></a>
 
                 <h1 class="logo"><a href="/">Startup Matchmaker</a></h1>
@@ -32,57 +40,75 @@
                         <li><a href="#">Blog</a></li>
                     </ul>
                 </nav>
-            </header>
+            </div>
+        </header>
 
-            <!-- Tagline -->
-                <div class="tagline">
-                    Because two brains <del>taste</del> <ins>are</ins> better than one.
-                </div>
+        <!-- Tagline -->
 
-
-            <!-- Hero -->
-                <section class="hero clearfix">
-                        <div class="hero-block">
-                                <h1 class="block-heading">Meet your Match!</h1>
-                                <p class="block-copy">Having a great idea for a product, but need help making it a reality? We're here to help. Startup Matchmaker is the place for designers and developers to find each other.</p>
-                                <a class=" btn-hero" href="#">Create a Profile</a>
-                    </div>
-
-                </section>
+        <div class="tagline row">
+            <div class="col">
+                Because two brains <del>taste</del> <ins>are</ins> better than one.
+            </div>
+        </div>
 
 
-            <!-- Blocks -->
-            <section class="row block-group clearfix">
+        <!-- Hero -->
 
-                <div class="block">
-                    <h2 class="block-heading">Create a Profile</h2>
-                    <p class="block-copy">Are you a Designer? Developer? Put yourself out there so that others can find you!</p>
-                    <a class=" btn-block" href="#">Sign up Now</a>
-                </div>
+        <section class="hero clearfix row">
 
-                <div class="block">
-                    <h2 class="block-heading">Find a Developer</h2>
-                    <p class="block-copy">Are you a Designer? Developer? Put yourself out there so that others can find you!</p>
-                    <a class=" btn-block" href="#">Start Your Search</a>
+            <div class="hero-block offset-md-7 col-md-4">
 
-                </div>
+                <h1 class="block-heading">Meet your Match!</h1>
+                <p class="block-copy">Having a great idea for a product, but need help making it a reality? We're here
+                    to
+                    help. Startup Matchmaker is the place for designers and developers to find each other.</p>
+                <a class=" btn btn-hero" href="#">Create a Profile</a>
+            </div>
 
-                <div class="block">
-                    <h2 class="block-heading">Find a Designer</h2>
-                    <p class="block-copy">Are you a Designer? Developer? Put yourself out there so that others can find you!</p>
-                    <a class=" btn-block" href="#">Find a Designer</a>
-                </div>
-
-            </section>
-
-            <!-- Footer -->
-                <footer class="col-lg-12 copyright">
-                    <span class="line-up">&copy;</span> 2016 Startup Matchmaker. Made in DC.
-                </footer>
+        </section>
 
 
+        <!-- Blocks -->
+        <section class="row block-group clearfix">
 
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        <script src="js/scripts.js"></script>
-    </body>
+            <div class="block">
+                <h2 class="block-heading">Create a Profile</h2>
+                <p class="block-copy">Are you a Designer? Developer? Put yourself out there so that others can find you!
+                </p>
+                <a class=" btn-block" href="#">Sign up Now</a>
+            </div>
+
+            <div class="col-4"></div>
+            <div class="col-4"></div>
+            <div class="col-4"></div>
+            <div class="block">
+                <h2 class="block-heading">Find a Developer</h2>
+                <p class="block-copy">Are you a Designer? Developer? Put yourself out there so that others can find you!
+                </p>
+                <a class=" btn-block" href="#">Start Your Search</a>
+
+            </div>
+
+            <div class="block">
+                <h2 class="block-heading">Find a Designer</h2>
+                <p class="block-copy">Are you a Designer? Developer? Put yourself out there so that others can find you!
+                </p>
+                <a class=" btn-block" href="#">Find a Designer</a>
+            </div>
+
+        </section>
+
+        <!-- Footer -->
+        <footer class="col-lg-12 copyright">
+            <span class="line-up">&copy;</span> 2016 Startup Matchmaker. Made in DC.
+        </footer>
+
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="js/scripts.js"></script>
+</body>
+
 </html>
