--- a/Lesson 14/02_Layout_Challenge_Bootstrap Edition/starter_code/layout_3.html
+++ b/Lesson 14/02_Layout_Challenge_Bootstrap Edition/starter_code/layout_3.html
@@ -1,34 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <title>Layout 3</title>
-    <!-- Add the Bootstrap CDN here -->
-    <link rel="stylesheet" href="css/styles.css" />
-  </head>
-  <body>
-    <header>
-      <div class="colorBox"></div>
-    </header>
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <main>
-      <div class="colorBox"></div>
+  <title>Layout 3</title>
+  <!-- Add the Bootstrap CDN here -->
+  <link rel="stylesheet" href="css/styles.css" />
+</head>
 
-      <div class="colorBox"></div>
+<body>
 
-      <div class="colorBox"></div>
 
-      <div class="colorBox"></div>
 
-      <div class="colorBox"></div>
-    </main>
+  <header>
+    <div class="row">
+      <div class="col">
+        <div class="colorBox"></div>
+      </div>
+    </div>
+  </header>
 
-    <footer>
-      <div class="colorBox"></div>
-    </footer>
-    <!-- Javascript Libraries Here-->
-  </body>
+
+
+  <main>
+    <div class="row">
+      <div class="col">
+        <div class="colorBox"></div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-2">
+        <div class="colorBox"></div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-2">
+        <div class="colorBox"></div>
+      </div>
+    </div>
+
+    <div class="colorBox"></div>
+
+    <div class="colorBox"></div>
+  </main>
+
+  <footer>
+    <div class="colorBox"></div>
+  </footer>
+  <!-- Javascript Libraries Here-->
+</body>
+
 </html>
