--- a/Lesson 12/01_Rover/rover-solution/index.html
+++ b/Lesson 12/01_Rover/rover-solution/index.html
@@ -41,7 +41,7 @@
           </div>
 
           <div class="burger">
-              <i class="fas fa-bars"></i>
+              <i class="fa-solid fa-bars"></i>
           </div>
 
         </div>
