--- a/Lesson 18/01_The_Bad_Intern_Gets_Socked/starter_code/index.html
+++ b/Lesson 18/01_The_Bad_Intern_Gets_Socked/starter_code/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Sock Commupance</title>
+    <title>Sock Commerce</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link href="styles.css" rel="stylesheet"/>
 </head>
@@ -61,28 +61,28 @@
         <div class="container">
 
             <div class="row productsHouse">
-<!--                <div class="col-lg-4 col-md-6">-->
-<!--                    <article class="card shadow-sm productBlock">-->
-<!--                        <a href="#" style="background-color:#222222" class="productBlockImgLink"><img src="images/socks-dress.png" alt="" class="card-img-top"></a>-->
+               <div class="col-lg-4 col-md-6">
+                   <article class="card shadow-sm productBlock">
+                       <a href="#" style="background-color:#222222" class="productBlockImgLink"><img src="images/socks-dress.png" alt="" class="card-img-top"></a>
 
-<!--                        <div class="card-body">-->
-<!--                            <h1 class="card-title"><a href="#">Dress Socks</a></h1>-->
+                       <div class="card-body">
+                            <h1 class="card-title"><a href="#">Dress Socks</a></h1>
 
-<!--                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>-->
+                           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
 
-<!--                            <div class="productBlockOptions">-->
-<!--                                <h2>Available Colors:</h2>-->
-<!--                                <div class="productBlockOptions_swatches">-->
-<!--                                    <a href="#294d06" style="background-color:#294d06"></a>-->
-<!--                                    <a href="#222222" style="background-color:#222222" class="productBlockOptions_swatches_selected"></a>-->
-<!--                                    <a href="#10273d" style="background-color:#10273d"></a>-->
-<!--                                    <a href="#000000" style="background-color:#ffffff"></a>-->
-<!--                                </div>-->
+                      <div class="productBlockOptions">
+                                <h2>Available Colors:</h2>-->
+                             <div class="productBlockOptions_swatches">-->
+                                   <a href="#294d06" style="background-color:#294d06"></a>-->
+                                    <a href="#222222" style="background-color:#222222" class="productBlockOptions_swatches_selected"></a>-->
+                                  <a href="#10273d" style="background-color:#10273d"></a>-->
+                                  <a href="#000000" style="background-color:#ffffff"></a>-->
+                              </div>-->
 
-<!--                                <h2>Available Sizes:</h2>-->
+                               <h2>Available Sizes:</h2>-->
 
-<!--                                <div class="productBlockOptions_inner">-->
-<!--                                    <div class="btn-group" role="group" aria-label="Basic radio toggle button group">-->
+                             <div class="productBlockOptions_inner">-->
+<!--                                   <div class="btn-group" role="group" aria-label="Basic radio toggle button group">-->
 <!--                                        <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>-->
 <!--                                        <label class="btn btn-outline-secondary btn-sm" for="btnradio1">S</label>-->
 
@@ -109,7 +109,7 @@
 
 <!--                        </div>-->
 <!--                    </article>-->
-<!--                </div>-->
+<!--                </div>
 
 
             </div>
