--- a/Homework 01/starter_code/Homework-1-18-23.html
+++ b/Homework 01/starter_code/Homework-1-18-23.html
@@ -299,7 +299,7 @@
             <li>Allen, Herbert J. (translator) (1895). "Ssŭma Ch'ien's Historical Records, Chapter II – The Hsia
                 Dynasty". Journal of the Royal Asiatic Society 27 (1): 93–110. doi:10.1017/S0035869X00022784.</li>
             <li>Legge, James (translator) (1865). "The Annals of the Bamboo Books: The Dynasty of Hea". The Chinese
-                Classics, volume 3, part 1. pp. 117–127..</li>
+                Classics, volume 3, part 1. pp. 117–127.</li>
         </ul>
 
     </article>
