--- a/Optional Lessons/email_lab/starter_code/email.html
+++ b/Optional Lessons/email_lab/starter_code/email.html
@@ -300,7 +300,7 @@
               <p style="margin: 0;">Sample Tractor Works 1234 Cornfield Way Kansas City, Kansas 12345</p>
             </td>
           </tr>
-          <!-- end unsubscribe -->
+          <!-- end unsubscribed -->
 
         </table>
         <!--[if (gte mso 9)|(IE)]>
